<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.rylinaux</groupId>
    <artifactId>PlugManX</artifactId>
    <version>${plugman.version}</version>
    <packaging>pom</packaging>

    <modules>
        <module>plugman-core</module>
        <module>plugman-bukkit</module>
        <module>plugman-paper</module>
        <module>plugman-bungee</module>
        <module>plugman-assembly</module>
    </modules>

    <profiles>
        <profile>
            <id>include-velocity</id>
            <modules>
                <module>plugman-velocity</module>
            </modules>
        </profile>
    </profiles>

    <name>PlugManX</name>
    <description>Plugin manager for Bukkit servers.</description>
    <url>https://www.spigotmc.org/resources/plugmanx.88135/</url>

    <inceptionYear>2010</inceptionYear>

    <developers>
        <developer>
            <name>Ryan Clancy</name>
            <email>rylinaux@gmail.com</email>
            <id>rylinaux</id>
            <roles>
                <role>Lead Developer</role>
            </roles>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>MIT</name>
            <url>https://opensource.org/licenses/MIT</url>
        </license>
    </licenses>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/Test-Account666/PlugManX/issues</url>
    </issueManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <plugman.version>3.0.0</plugman.version>
        <manifold.version>2025.1.26</manifold.version>
        <jackson.version>2.13.5</jackson.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <encoding>UTF-8</encoding>
                    <compilerArgs>
                        <!-- Configure manifold plugin-->
                        <arg>-Xplugin:Manifold</arg>
                    </compilerArgs>
                    <!-- Add the processor path for the plugin -->
                    <annotationProcessorPaths>
                        <path>
                            <groupId>systems.manifold</groupId>
                            <artifactId>manifold-tuple</artifactId>
                            <version>${manifold.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.38</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>nexomc</id>
            <url>https://repo.nexomc.com/releases/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Lombok for reducing boilerplate code -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.38</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>systems.manifold</groupId>
            <artifactId>manifold-tuple-rt</artifactId>
            <version>${manifold.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>systems.manifold</groupId>
            <artifactId>manifold-rt</artifactId>
            <version>${manifold.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Jackson for JSON/YAML configuration management -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>2.0</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>
